--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>openbouquet</groupId>
+		<groupId>io.openbouquet</groupId>
 		<artifactId>bouquet-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../bouquet-parent/pom.xml</relativePath>
@@ -53,7 +53,7 @@
 			<version>2.4</version>
 		</dependency>
 		<dependency>
-			<groupId>openbouquet</groupId>
+			<groupId>io.openbouquet</groupId>
 			<artifactId>bouquet-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
